--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Mental Health and Wellness Knowledge Base
+title: Mental Health Knowledge Base
 description: >- # this means to ignore newlines until "baseurl:"
   A diverse collection of mental health links
 baseurl: "" # the subpath of your site, e.g. /blog
